:white_check_mark: Add more test cases for 2.6